2001-04-22  Elliot Glaysher <nuriko.chan@home.com>

	* Netcomics/Factory.pm: Fixed bug that caused "Sort subroutine
	didn't return single value at /usr/lib/perl5/Netcomics/Factory.pm
	line 865." on netcomics -l. (Ben, I may have broken other things
	while fixing this, please advise.)
	
2001-04-22  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* Modularized the rest of netcomics.

2001-04-02  Elliot Glaysher <nuriko.chan@home.com>

	* netcomics, display_comics, show_comics, Netcomics/*: Added
	explicit GPL statements to the 	beginnings of each file.
	
2001-03-31  Elliot Glaysher <nuriko.chan@home.com>

	* Netcomics/HTML.pm: Bad Elliot! Bad! Don't leave your debugging
	statement in when you commit!
	
2001-03-27  Elliot Glaysher <nuriko.chan@home.com>

	* TODO: After using the new -P function, I updated the TODO
	because of a minor problem in the generation of the index.html
	file.
	
2001-03-26  Elliot Glaysher <nuriko.chan@home.com>

	* netcomics: Modified behaviour of the -P. Now stores just file
	names in the $rli->{'file'}. This modification was neccesary 
	because of my changes to...
	* Netcomics/HTML.pm: Reworked most of HTML.pm. When  -P is
	activated, now creates a seperate set of HTML pages in each
	directory for each comic being archived.
	
2001-03-11  Elliot Glaysher <nuriko.chan@home.com>

	* netcomics: Small change so $rli->{'base'}, $rli->{'page'},
	and $rli->{'exprs'} are deleted from their respective hashes
	before being written to disk.

2001-03-08  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* netcomics: Fixed printing of URLs when no webpage created so
	that the selected comics' URLs are always printed.  Also, if not
	creating a webpage, filenames are now printed simliarly.
	* netcomics: Fixed POD so that manpage example list items are
	formatted correctly by adding titles to each item.  Changed the
	BUGS list to simply reference the TODO file.

2001-03-07  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>
